	* libdtrace/dt_proc.c (dt_proc_control): Adjust Pgrab() and
	Pcreate() calls.
	* test/triggers/libproc-pldd.c (main): Likewise.
	* test/triggers/libproc-consistency.c (main): Likewise.
	* test/triggers/libproc-lookup-by-name.c (main): Likewise.

	Drop RD_PREINIT / RD_POSTINIT.

	* include/rtld_db.h (rd_event_e): Drop them.
	* libdtrace/dt_proc.c (dt_proc_rdevent): Likewise.

	Miscellaneous.

	* runtest: Wait for a second for coredumps to make it to disk.

2013-06-04  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build (DRTI_OBJ): Always build -fPIC.

2013-06-03  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_program.c (dtrace_program_header): Emit missing
	#include.

2013-05-22  Nick Alcock  <nick.alcock@oracle.com>

	Breakpoint notifiers.

	* libproc/libproc.h (Pbkpt_notifier): New prototype.
	* libproc/Pcontrol.h (bkpt_handler_t.notifier_list): New, this is
	sometimes now kept in a list.
	(bkpt_t.bkpt_notifiers): The list (of notifiers).
	* libproc/Pcontrol.c (Pbkpt): Rename to...
	(add_bkpt): ... this, and add is_notifier argument and optional
	addition to the notifier list.
	(Pbkpt): Re-express as wrapper around add_bkpt.
	(Pbkpt_notifier): New function, wrapper around add_bkpt.
	(Punbkpt): Refactor out cleanup calls and bkpt freeing into...
	(delete_bkpt_handler): ... this new function.  Add notifier
	cleanup calls and freeing.
	(bkpt_flush): Use it rather than open-coding the cleanup.
	(bkpt_handle_start): Call the notifiers, if any.  Don't call the
	handler if there is none.
	(bkpt_handle_post_singlestep): Likewise, for post-singlestep
	breakpoints.

	* libproc/rtld_db.c (rd_start_trap): Now a notifier, returning void.
	(rd_exec_handler): Add it with Pbkpt_notifier(), not Pbkpt().
	(rd_new): Likewise.

	Post-handler breakpoint removal.

	* libproc/Pcontrol.h (bkpt_t.in_handler): New, true if this handler
	is executing now.
	(bkpt_t.pending_removal): New, true if Punbkpt() was called while
	in-handler.